--- a/python-tool.html
+++ b/python-tool.html
@@ -16,8 +16,8 @@
     <img src="{% static '/images/liexe.ico' %}" width="256" height="256" alt="go to github"/>
 </a>
 <br/>
-<a href="{% static '/download/python_tool/Windows/Latest/python_tool.exe' %}" download>下载python—tool(Windows)</a>
+<a href="static/download/python_tool/Windows/Latest/python_tool.exe" download>下载python—tool(Windows)</a>
 </br>
-<a href="{% static '/download/python_tool/Mac/Latest/python_tool.dmg' %}" download>下载python—tool(for macos)</a>
+<a href="static/download/python_tool/Mac/Latest/python_tool.dmg" download>下载python—tool(for macos)</a>
 </body>
 </html>
