--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8" name="404" content="not found">
     <title>404 Not Found</title>
-    <link rel="stylesheet"  href="{% static '/css/404.css' %}">
+    <link rel="stylesheet"  href="static/css/404.css">
 </head>
 <body>
 
@@ -14,6 +14,6 @@
 <a href="http://192.168.31.24:8000" target="_blank" >
     go to main page
 </a>
-<img src="{% static '/images/404.png' %}" width="1200" height="923" alt="404 NOT FOUND"/>
+<img src="static/images/404.png" width="1200" height="923" alt="404 NOT FOUND"/>
 </body>
 </html>
