--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    {% load static %}
     <meta charset="utf-8" name="liexe" content="python-tool">
     <title>python-tool</title>
-    <link rel="stylesheet"  href="{% static '/css/pt.css' %}">
+    <link rel="stylesheet"  href="/static/css/pt.css">
 </head>
 <body>
-<!---->
-{% load static %}
-<h1>{{ SB }}的介绍</h1>
-<p>{{SB}}是一个工具，可以更方便操纵python，pip等。现{{tmd}}.最新版本为{{ version }}.</p>
+
+
+<h1>python_tool的介绍</h1>
+<p>python_tool是一个工具，可以更方便操纵python，pip等。现仍在开发中.最新版本为1.0.3.</p>
 <br/>
 <a href="https://github.com/githubtohaoyangli/python_tool/" target="_blank">
-    <img src="{% static '/images/liexe.ico' %}" width="256" height="256" alt="go to github"/>
+    <img src="/static/images/liexe.ico" width="256" height="256" alt="go to github"/>
 </a>
 <br/>
-<a href="static/download/python_tool/Windows/Latest/python_tool.exe" download>下载python—tool(Windows)</a>
+<a href="/static/download/python_tool/Windows/Latest/python_tool.exe" download>下载python—tool(Windows)</a>
 </br>
-<a href="static/download/python_tool/Mac/Latest/python_tool.dmg" download>下载python—tool(for macos)</a>
+<a href="/static/download/python_tool/Mac/Latest/python_tool.dmg" download>下载python—tool(for macos)</a>
 </body>
 </html>
