--- a/404.html
+++ b/404.html
@@ -11,9 +11,10 @@
 <h1>Not Found</h1>
 <p>why? because we can't found your page you want</p>
 <br>
-<a href="http://192.168.31.24:8000" target="_blank" >
+<a href="http://githubtohaoyangli.github.io/" target="_blank">
     go to main page
 </a>
+<br/>
 <img src="./static/images/404.png" width="1200" height="923" alt="404 NOT FOUND"/>
 </body>
 </html>
