--- a/404.html
+++ b/404.html
@@ -3,8 +3,7 @@
 <head>
     
     <meta charset="utf-8" name="404" content="not found">
-    <title>404 Not Found</title>
-    <link rel="stylesheet"  href="./static/css/404.css">
+    <title>Not Found</title>
 </head>
 <body>
 
@@ -15,6 +14,5 @@
     go to main page
 </a>
 <br/>
-<img src="./static/images/404.png" width="1200" height="923" alt="404 NOT FOUND"/>
 </body>
 </html>
