--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 
-<h1>python_tool的介绍</h1>
-<p>python_tool是一个工具，可以更方便操纵python，pip等。现仍在开发中(2.0).最新版本为1.0.3.</p>
+<h1>python_tool</h1>
+<p>快速入门（网站暂不可用）</p>
 <br/>
 <a href="https://github.com/githubtohaoyangli/python_tool/" target="_blank">
     <img src="/static/images/pt.ico" width="256" height="256" alt="go to github"/>
