--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <h1>python_tool</h1>
-<p>快速入门（网站暂不可用）</p>
+<p>快速入门（网站暂不可用!!）</p>
 <br/>
 <a href="https://github.com/githubtohaoyangli/python_tool/" target="_blank">
     <img src="/static/images/pt.ico" width="256" height="256" alt="go to github"/>
