--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet"  href="/static/css/pt.css">
 </head>
 <body>
-
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    gsap.from('.animate', {duration: 1, opacity: 0, y: -50, stagger: 0.2});
+});
+</script>
 
 <h1>python_tool</h1>
 <p>快速入门（网站暂不可用!!）</p>
