--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
 <h1>python_tool</h1>
-<p>快速入门（网站暂不可用!!）</p>
+<p>HOME</p>
 <br/>
 <a href="https://github.com/githubtohaoyangli/python_tool/" target="_blank">
     <img src="/static/images/pt.ico" width="256" height="256" alt="go to github"/>
+</a>
+<br/>
+<br/>
+<br/>
+<a href="https://githubtohaoyangli.github.io/getting-started/getting.html" download>
+    <img src="static/images/gstr.png" width="350" height="30" alt="getting started->"/>
 </a>
 <br/>
 <br/>
