--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <br/>
 <br/>
 <a href="https://githubtohaoyangli.github.io/getting-started/getting.html" download>
-    <img src="static/images/gstr.png" width="350" height="30" alt="getting started->"/>
+    <img src="static/images/gstr.png" alt="getting started->"/>
 </a>
 <br/>
 <br/>
