--- a/404.html
+++ b/404.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    
-    <meta charset="utf-8" name="404" content="not found">
-    <title>Not Found</title>
-</head>
-<body>
+---
+permalink: /404.html
+layout: default
+---
 
-<h1>Not Found</h1>
-<p>why? because we can't found your page you want</p>
-<br>
-<a href="http://githubtohaoyangli.github.io/" target="_blank">
-    go to main page
-</a>
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
 
-</body>
-</html>
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
+</div>
