--- a/404.html
+++ b/404.html
@@ -22,4 +22,5 @@ layout: default
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <a href="https://pyquick.github.io/">Go back to the home page</a>
 </div>
