对网站下载更改

--- a/data/insiders/dev/dev.html
+++ b/data/insiders/dev/dev.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="dev.css">
-  <script src="dev.js"></script>
+  <link rel="stylesheet" href="./dev.css">
+  <script src="./dev.js"></script>
   <title>Insider Dev Download</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <h2>Available Builds</h2>
     <ul>
       <li>
-        <a href="/data/insiders/dev/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
+        <a href="/data/insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
           <span class="version">Build 2004</span>
           <span class="platform">(Windows)</span>
         </a>
