--- a/data/stable/stable.html
+++ b/data/stable/stable.html
@@ -9,7 +9,6 @@
   <title>Download Page</title>
 </head>
 <body>
-
 <div class="container">
   <h1>Download Page</h1>
   <p class="subtitle">Choose your build version:</p>
@@ -26,6 +25,25 @@
         <a href="/data/stable/souc/macOS/102/python_tool.dmg" download="python_tool.dmg">
           <span class="version">1.0.2</span>
           <span class="platform">(macOS)</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- 新增Old Builds容器 -->
+  <div class="version-box">
+    <h2>Old Builds</h2>
+    <ul>
+      <li>
+        <a href="/data/stable/souc/Windows/101/python_tool.exe" download="python_tool.exe">
+          <span class="version">1.0.1</span>
+          <span class="platform">(Windows)</span>
+        </a>
+      </li>
+      <li>
+        <a href="/data/stable/souc/Windows/100/python_tool.exe" download="python_tool.exe">
+          <span class="version">1.0.0</span>
+          <span class="platform">(Windows)</span>
         </a>
       </li>
     </ul>
