--- a/data/insiders/beta/beta.html
+++ b/data/insiders/beta/beta.html
@@ -5,27 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="beta.css">
   <script src="beta.js"></script>
-  <title>Insider Beta Download</title>
+  <title>Beta Download - PyQuick</title>
 </head>
 <body>
 
 <div class="container">
-  <h1>Insider Beta Download</h1>
-  <p class="subtitle">Experience the latest features before anyone else</p>
+  <h1>Beta Download</h1>
+  <p class="subtitle">Join the beta program, experience the latest features, and help us improve the product</p>
   <div class="version-box">
     <h2>Available Builds</h2>
     <ul>
       <li>
-        <a href="/data/insiders/beta/souc/Windows/1103/pyquick1103.zip" download="pyquick2004.zip">
+        <a href="/data/insiders/beta/souc/Windows/1104/pyquick1103.zip" download="pyquick1103.zip">
           <span class="version">Build 1103</span>
           <span class="platform">(Windows)</span>
+        </a>
+      </li>
+      <li>
+        <a href="/data/insiders/beta/souc/macOS/1103/pyquick1103.dmg" download="pyquick1103.dmg">
+          <span class="version">Build 1103</span>
+          <span class="platform">(macOS)</span>
         </a>
       </li>
     </ul>
   </div>
 
   <div class="info-box">
-    <p>This build is experimental. Please report any issues you encounter.</p>
+    <p>This build is a beta version and may contain instability. Please report any issues you encounter to help us improve the product.</p>
   </div>
 </div>
 
