--- a/data/insiders/dev/dev.html
+++ b/data/insiders/dev/dev.html
@@ -11,7 +11,7 @@
 
 <div class="container">
   <h1>Insider Dev Download</h1>
-  <p class="subtitle">Experience the latest features before anyone else</p>
+  <p class="subtitle">Experience the latest cutting-edge features before anyone else</p>
   <div class="version-box">
     <h2>Available Builds</h2>
     <ul>
@@ -21,11 +21,17 @@
           <span class="platform">(Windows)</span>
         </a>
       </li>
+      <li>
+        <a href="/data/insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
+          <span class="version">Build 1960</span>
+          <span class="platform">(macOS)</span>
+        </a>
+      </li>
     </ul>
   </div>
 
   <div class="info-box">
-    <p>This build is experimental. Please report any issues you encounter.</p>
+    <p>This build is experimental and may contain bugs. Please report any issues you encounter.</p>
   </div>
 </div>
 
