--- a/main/main.html
+++ b/main/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>PyQuick - Python高效管理工具</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://python.org/ftp/python">
 </head>
 <body>
     <div class="container">
