docs: 删除旧文档并重新组织文件结构
- 删除了旧的 Markdown 文件，包括 2025 年新年和 Pyquick2.0 发布相关内容
- 移除了 _config.yml 和 about.markdown 文件
- 重新命名了 Insider 计划相关文件，调整了文件路径结构
- 删除了稳定版的 GPL3 许可证文本文件

--- a/data/beta.html
+++ b/data/beta.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="beta.css">
-  <script src="beta.js"></script>
+  <link rel="stylesheet" href="./static/css/beta.css">
+  <script src="./static/js/beta.js"></script>
   <title>Beta Download - PyQuick</title>
 </head>
 <body>
