--- a/data/stable.html
+++ b/data/stable.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="stable.css">
-  <link rel="icon" href="favicon.ico">
-  <script src="stable.js"></script>
+  <link rel="stylesheet" href="./static/css/stable.css">
+  <link rel="icon" href="./stable/favicon.ico">
+  <script src="./static/js/stable.js"></script>
   <title>Download Page</title>
 </head>
 <body>
@@ -53,8 +53,8 @@
   <div class="insiders-box">
     <h2>Insiders</h2>
     <div class="button-group">
-      <a href="/data/insiders/dev/dev.html" class="insiders-button">Insiders (Dev)</a>
-      <a href="/data/insiders/beta/beta.html" class="insiders-button">Insiders (Beta)</a>
+      <a href="dev.html" class="insiders-button">Insiders (Dev)</a>
+      <a href="beta.html" class="insiders-button">Insiders (Beta)</a>
     </div>
   </div>
 
