--- a/data/dev.html
+++ b/data/dev.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./dev.css">
-  <script src="./dev.js"></script>
+  <link rel="stylesheet" href="./static/css/dev.css">
+  <script src="./static/js/dev.js"></script>
   <title>Insider Dev Download</title>
 </head>
 <body>
