refactor(pyquick): 重构页面样式和交互效果
// -精简了 index.css 文件，删除了大量未使用的样式

// -优化了主标题、卡片、社交链接等元素的样式和交互效果

// -优化了页面的布局和交互体验，如卡片的展示方式、卡片的展开和收起效果、页面的滚动效果等

// -优化了代码结构，删除了冗余代码和注释，提升了代码可读性

// -优化了代码风格，统一了代码格式，并添加了注释
- 添加了新的动画效果，如浮动动画和渐入效果
- 改进了页面滚动和卡片展示的交互体验
- 统一了 pyquick 项目的样式风格，提升了整体视觉效果

--- a/pyquick/main.html
+++ b/pyquick/main.html
@@ -62,7 +62,7 @@
         <!-- ... existing sections ... -->
 
         <footer class="footer">
-            <p>项目地址:<a href="https://github.com/pyquick/pyquick" target="_blank">https://github.com/pyquick/pyquick</a>dev</p>
+            <p>项目地址:<a href="https://github.com/pyquick/pyquick" target="_blank">https://github.com/pyquick/pyquick</a></p>
             <p>文档中心(for developers):<a href="/developers" target="_blank">developers</a></p>
         </footer>
     </main>
