feat(dev): 添加 Build 2008 并更新首页内容- 在 dev.html 中添加 Build2008 下载链接- 更新 index.html 中的下载提示文本 - 新增开发者文档链接 - 修改新year.html 的标题

--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
             <div class="card-content">
                 <i class="fas fa-download icon"></i>
                 <h2>下载 PyQuick</h2>
-                <p>获取最新稳定版本</p>
+                <p>获取最新版本</p>
             </div>
         </a>
 
         <a href="./daily/newyear.html" class="card">
             <div class="card-content">
                 <i class="fas fa-calendar-alt icon"></i>
-                <h2>开发日志</h2>
+                <h2>一些记录</h2>
                 <p>查看最新开发动态</p>
+            </div>
+        </a>
+        <a href="./developer/main.html" class="card">
+            <div class="card-content">
+                <i class="fas fa-cogs icon"></i>
+                <h2>开发者文档</h2>
+                <p>帮助你如何开发pyquick</p>
             </div>
         </a>
     </div>
