--- a/data/dev.html
+++ b/data/dev.html
@@ -16,6 +16,12 @@
     <h2>Available Builds</h2>
     <ul>
       <li>
+        <a href="/data/insiders/dev/souc/Windows/2008/pyquick2008_win.zip" download="pyquick2008_win.zip">
+          <span class="version">Build 2008</span>
+          <span class="platform">(Windows)</span>
+        </a>
+      </li>
+      <li>
         <a href="/data/insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
           <span class="version">Build 2004</span>
           <span class="platform">(Windows)</span>
