--- a/data/dev.html
+++ b/data/dev.html
@@ -16,19 +16,19 @@
     <h2>Available Builds</h2>
     <ul>
       <li>
-        <a href="/data/insiders/dev/souc/Windows/2008/pyquick2008_win.zip" download="pyquick2008_win.zip">
+        <a href="./insiders/dev/souc/Windows/2008/pyquick2008_win.zip" download="pyquick2008_win.zip">
           <span class="version">Build 2008</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
       <li>
-        <a href="/data/insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
+        <a href="./insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
           <span class="version">Build 2004</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
       <li>
-        <a href="/data/insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
+        <a href="./insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
           <span class="version">Build 1960</span>
           <span class="platform">(macOS)</span>
         </a>
