--- a/data/stable.html
+++ b/data/stable.html
@@ -16,15 +16,15 @@
     <h2>Available Builds</h2>
     <ul>
       <li>
-        <a href="/data/stable/souc/Windows/102/python_tool.exe" download="python_tool.exe">
+        <a href="./stable/souc/Windows/102/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.2</span>
-          <span class="platform">(Windows)</span>
+          <span class="platformWin">(Windows)</span>
         </a>
       </li>
       <li>
-        <a href="/data/stable/souc/macOS/102/python_tool.dmg" download="python_tool.dmg">
+        <a href="./stable/souc/macOS/102/python_tool.dmg" download="python_tool.dmg">
           <span class="version">1.0.2</span>
-          <span class="platform">(macOS)</span>
+          <span class="platformMac">(macOS)</span>
         </a>
       </li>
     </ul>
@@ -35,13 +35,13 @@
     <h2>Old Builds</h2>
     <ul>
       <li>
-        <a href="/data/stable/souc/Windows/101/python_tool.exe" download="python_tool.exe">
+        <a href="./stable/souc/Windows/101/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.1</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
       <li>
-        <a href="/data/stable/souc/Windows/100/python_tool.exe" download="python_tool.exe">
+        <a href="./stable/souc/Windows/100/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.0</span>
           <span class="platform">(Windows)</span>
         </a>
