refactor(css): 优化下载页面样式和布局
- 调整了 404.html、beta.html、dev.html 和 stable.html 的样式
- 优化了按钮、链接和容器的圆角样式
- 改进了悬停效果和动画
- 统一了颜色主题和字体样式

--- a/data/beta.html
+++ b/data/beta.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/beta.css">
   <script src="./static/js/beta.js"></script>
-  <title>Beta Download - PyQuick</title>
+  <title>Beta Download</title>
 </head>
 <body>
 
