--- a/data/stable.html
+++ b/data/stable.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="./static/css/stable.css">
   <link rel="icon" href="./stable/favicon.ico">
   <script src="./static/js/stable.js"></script>
-  <title>Download Page</title>
+  <title>Stable Download</title>
 </head>
 <body>
 <div class="container">
-  <h1>Download Page</h1>
+  <h1>Stable Download</h1>
   <p class="subtitle">Choose your build version:</p>
   <div class="version-box">
     <h2>Available Builds</h2>
