--- a/data/dev.html
+++ b/data/dev.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/dev.css">
   <script src="./static/js/dev.js"></script>
-  <title>Insider Dev Download</title>
+  <title>Dev Download</title>
 </head>
 <body>
 
 <div class="container">
-  <h1>Insider Dev Download</h1>
+  <h1>Dev Download</h1>
   <p class="subtitle">Experience the latest cutting-edge features before anyone else</p>
   <div class="version-box">
     <h2>Available Builds</h2>
