refactor: 优化资源路径和页面链接
- 更新 404.html 和 index.html 中的样式表路径
- 修改 404.html 中的主页链接地址- 修正 index.html 中的脚本路径

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyQuick 主页</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="static/css/index.css">
     <!-- 引入 Font Awesome 图标 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -58,6 +58,6 @@
     </a>
 </footer>
 
-<script src="index.js"></script>
+<script src="static/css/index.js"></script>
 </body>
 </html>
