--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <title>404 - Page not found</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./404.css">
+  <link rel="stylesheet" href="static/css/404.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
@@ -12,7 +12,7 @@
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
-  <a href="https://pyquick.github.io/">Go back to the home page</a>
+  <a href="/index.html">Go back to the home page</a>
 </div>
 </body>
 </html>
