--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <title>404 - Page not found</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="static/css/404.css">
+  <link rel="stylesheet" href="/static/css/404.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
