style: 更新页面样式和动画效果
- 修改背景为浅色渐变
- 新增背景动画- 更新主标题样式和动画- 调整卡片悬停效果
- 新增版本框和Insiders框浮动效果
- 更新页面加载和滚动动画

--- a/data/beta.html
+++ b/data/beta.html
@@ -30,6 +30,18 @@
     </ul>
   </div>
 
+  <div class="insiders">
+    <h2>Insiders</h2>
+    <ul>
+      <div class="button-group">
+        <li>
+          <a href="stable.html" class="insiders-button">Stable</a>
+        </li>
+        <li><a href="dev.html" class="insiders-button">Dev</a></li>
+      </div>
+    </ul>
+  </div>
+
   <div class="info-box">
     <p>This build is a beta version and may contain instability. Please report any issues you encounter to help us improve the product.</p>
   </div>
