--- a/data/dev.html
+++ b/data/dev.html
@@ -12,27 +12,40 @@
 <div class="container">
   <h1>Dev Download</h1>
   <p class="subtitle">Experience the latest cutting-edge features before anyone else</p>
+
   <div class="version-box">
     <h2>Available Builds</h2>
     <ul>
       <li>
         <a href="./insiders/dev/souc/Windows/2008/pyquick2008_win.zip" download="pyquick2008_win.zip">
-          <span class="version">Build 2008</span>
+          <span class="versionb">Build 2008</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
       <li>
         <a href="./insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
-          <span class="version">Build 2004</span>
+          <span class="versionb">Build 2004</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
       <li>
         <a href="./insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
-          <span class="version">Build 1960</span>
+          <span class="versionb">Build 1960</span>
           <span class="platform">(macOS)</span>
         </a>
       </li>
+    </ul>
+  </div>
+
+  <div class="version">
+    <h2>Insiders</h2>
+    <ul>
+      <div class="button-group">
+        <li>
+          <a href="stable.html" class="insiders-button active">Stable</a>
+        </li>
+        <li><a href="beta.html" class="insiders-button">Beta</a></li>
+      </div>
     </ul>
   </div>
 
