--- a/data/stable.html
+++ b/data/stable.html
@@ -53,8 +53,8 @@
   <div class="insiders-box">
     <h2>Insiders</h2>
     <div class="button-group">
-      <a href="dev.html" class="insiders-button">Insiders (Dev)</a>
-      <a href="beta.html" class="insiders-button">Insiders (Beta)</a>
+      <a href="dev.html" class="insiders-button">Dev</a>
+      <a href="beta.html" class="insiders-button">Beta</a>
     </div>
   </div>
 
