fix: 更新发布日期和移除多余的任务记录

--- a/daily/pyquick2.0.html
+++ b/daily/pyquick2.0.html
@@ -14,13 +14,13 @@
     </ul>
 </div>
 <div class="container">
-    <h1>Pyquick 2.0 震撼发布！🚀</h1>
+    <h1>Pyquick 2.0 即将发布！🚀</h1>
 
     <section class="release-info">
-        <h2>🗓️ 发布日期</h2>
+        <h2>🗓️ Dev发布日期</h2>
         <ul>
-            <li>Windows 平台：2025年3月29日</li>
-            <li>Mac 平台：2025年4月5日</li>
+            <li>Windows 平台：<strong>2025年3月15日</strong></li>
+            <li>Mac 平台：<strong>2025年4月5日</strong></li>
         </ul>
     </section>
 
