fix: 更新版本链接样式和移除多余的任务记录

--- a/data/beta.html
+++ b/data/beta.html
@@ -34,10 +34,8 @@
     <h2>Insiders</h2>
     <ul>
       <div class="button-group">
-        <li>
           <a href="stable.html" class="insiders-button">Stable</a>
-        </li>
-        <li><a href="dev.html" class="insiders-button">Dev</a></li>
+          <a href="dev.html" class="insiders-button">Dev</a>
       </div>
     </ul>
   </div>
