fix: 更新版本链接样式和移除多余的任务记录

--- a/data/dev.html
+++ b/data/dev.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./static/css/dev.css">
+  <link rel="stylesheet" href="static/css/insiders.css">
   <script src="./static/js/dev.js"></script>
   <title>Dev Download</title>
 </head>
@@ -15,29 +15,29 @@
 
   <div class="version-box">
     <h2>Available Builds</h2>
-    <ul>
-      <li>
-        <a href="./insiders/dev/souc/Windows/2008/pyquick2008_win.zip" download="pyquick2008_win.zip">
-          <span class="versionb">Build 2008</span>
+    <ul id="builds-list">
+      <li class="windows-build">
+        <a href="/data/insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
+          <span class="version">Build 2004</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
-      <li>
-        <a href="./insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
-          <span class="versionb">Build 2004</span>
-          <span class="platform">(Windows)</span>
+      <li class="macos-build">
+        <a href="/data/insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
+          <span class="version">Build 1960</span>
+          <span class="platform">(macOS)</span>
         </a>
       </li>
-      <li>
-        <a href="./insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
-          <span class="versionb">Build 1960</span>
+      <li class="macos-build">
+        <a href="/data/insiders/dev/souc/macOS/1960/pyquick1960.zip" download="pyquick1960.zip">
+          <span class="version">Build 1960</span>
           <span class="platform">(macOS)</span>
         </a>
       </li>
     </ul>
   </div>
 
-  <div class="version">
+  <div class="insiders">
     <h2>Insiders</h2>
     <ul>
       <div class="button-group">
