--- a/data/stable.html
+++ b/data/stable.html
@@ -14,17 +14,17 @@
   <p class="subtitle">Choose your build version:</p>
   <div class="version-box">
     <h2>Available Builds</h2>
-    <ul>
-      <li>
-        <a href="./stable/souc/Windows/102/python_tool.exe" download="python_tool.exe">
+    <ul id="builds-list">
+      <li class="windows-build">
+        <a href="/data/stable/souc/Windows/102/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.2</span>
-          <span class="platformWin">(Windows)</span>
+          <span class="platform">(Windows)</span>
         </a>
       </li>
-      <li>
-        <a href="./stable/souc/macOS/102/python_tool.dmg" download="python_tool.dmg">
+      <li class="macos-build">
+        <a href="/data/stable/souc/macOS/102/python_tool.dmg" download="python_tool.dmg">
           <span class="version">1.0.2</span>
-          <span class="platformMac">(macOS)</span>
+          <span class="platform">(macOS)</span>
         </a>
       </li>
     </ul>
@@ -33,14 +33,14 @@
   <!-- 新增Old Builds容器 -->
   <div class="version-box">
     <h2>Old Builds</h2>
-    <ul>
-      <li>
+    <ul id="old-builds-list">
+      <li class="windows-build">
         <a href="./stable/souc/Windows/101/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.1</span>
           <span class="platform">(Windows)</span>
         </a>
       </li>
-      <li>
+      <li class="windows-build">
         <a href="./stable/souc/Windows/100/python_tool.exe" download="python_tool.exe">
           <span class="version">1.0.0</span>
           <span class="platform">(Windows)</span>
