feat: 添加邮箱弹出框功能
- 在页面底部增加邮箱图标
- 点击邮箱图标弹出包含两个邮箱地址的窗口- 每个邮箱地址旁增加复制按钮，点击可复制邮箱地址
- 弹出窗口包含关闭按钮，点击可关闭窗口- 优化了邮箱弹出框及相关元素的样式

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <a href="https://www.twitter.com/exe258011" target="_blank">
         <i class="fab fa-twitter"></i>
     </a>
+    <a href="#" id="email-icon">
+        <i class="fas fa-envelope"></i>
+    </a>
 </footer>
 
 <script src="/static/js/index.js"></script>
