docs(insiders): 添加 PyQuick2020 Dev 版本发布页面
- 新增 2020 Dev 版本发布页面，介绍新功能和改进- 添加 Insider 预览通道说明页面
- 创建 Fight Hub 页面，列出不同版本的下载链接- 更新首页，调整 Insider Preview链接指向
- 新增多套 CSS 样式和 JS 动画效果，提升页面体验

--- a/insiders/main.html
+++ b/insiders/main.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PyQuick Insiders 介绍</title>
+    <link rel="stylesheet" href="static/css/all.css">
+    <link rel="stylesheet" href="static/css/intrduce.css">
 </head>
 <body>
-
+    <h1>PyQuick Insiders 介绍</h1>
+    <div class="container">
+        <section class="intro-section">
+            <h2>PyQuick Insiders 通道</h2>
+            <p>PyQuick Insiders 提供了不同的通道，供用户提前体验最新功能和改进。以下是当前可用的通道：</p>
+        </section>
+    </div>
+    <div class="container">
+        <section class="intro-section">
+            <ul class="channel-list">
+                <li>
+                    <strong>Dev 通道</strong><br/> 这是给开发者用的预览产品。<br/> 这些版本未经过充分测试，可能会出现不稳定的现象，遇到请立即issue反馈。<br/> 这些版本一般不定期更新，但设有过期时间，若过期请从<strong>计算机移除它。</strong><br/>
+                    <br/>
+                    <a href="2020.html">查看最新文档</a>
+                    <br/>
+                    <br/>
+                    <a href="/data/dev.html">下载安装包</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="container">
+        <section class="intro-section">
+            <ul class="channel-list">
+                <li>
+                    <strong>Beta 通道</strong><br/> 测试人员/开发者/发烧者的理想之选。<br/> 这些版本经过一定测试，且通过认证，但仍有BUG，遇到请立即issue反馈。<br/>
+                    <br/>
+                    <p>查看最新文档</p>
+                    <br/>
+                    <br/>
+                    <a href="/data/beta.html">下载安装包</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="container">
+        <section class="intro-section">
+            <ul class="channel-list">
+                <li>
+                    <strong>RP (Release Preview) 通道</strong><br/> 这些版本是beta/dev累积的经验，已经比较稳定。<br/> 在这些版本中，开放不稳定新功能非常谨慎，一般在正式版之前前1-2个月开放。之后这些人会进入正式版<br/>
+                    <br/>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <script src="static/js/all.js"></script>
 </body>
 </html>
