--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <p>查看最新开发动态</p>
             </div>
         </a>
-        <a href="./developer/main.html" class="card">
+        <a href="./insiders/main.html" class="card">
             <div class="card-content">
                 <i class="fas fa-cogs icon"></i>
-                <h2>开发者文档</h2>
-                <p>帮助你如何开发pyquick</p>
+                <h2>Insider Preview</h2>
+                <p>最新版本文档（dev不完整）</p>
             </div>
         </a>
     </div>
