--- a/data/dev.html
+++ b/data/dev.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/insiders.css">
+  <link rel="stylesheet" href="./static/css/insiders.css">
   <script src="./static/js/dev.js"></script>
   <title>Dev Download</title>
 </head>
@@ -16,6 +16,12 @@
   <div class="version-box">
     <h2>Available Builds</h2>
     <ul id="builds-list">
+      <li class="windows-build">
+        <a href="https://github.com/pyquick/pyquick/releases/download/2020/pyquick_2020.rar" download="pyquick_2020.rar">
+          <span class="version">Build 2020</span>
+          <span class="platform">(Windows)</span>
+        </a>
+      </li>
       <li class="windows-build">
         <a href="/data/insiders/dev/souc/Windows/2004/pyquick2004.zip" download="pyquick2004.zip">
           <span class="version">Build 2004</span>
