--- a/data/beta.html
+++ b/data/beta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/insiders.css">
+  <link rel="stylesheet" href="./static/css/insiders.css">
   <script src="./static/js/beta.js"></script>
   <title>Beta Download</title>
 </head>
