--- a/insiders/2020.html
+++ b/insiders/2020.html
@@ -56,6 +56,7 @@
     <ul>
         <li>新设计的窗口有延时的问题，提示窗口会在程序启动后弹出</li>
         <li>程序每次打开都需要数秒</li>
+        <li>[ADDED]进度条第一次下载正常，第二次异常</li>
     </ul>
 
     <p>去tk化从2.0开始，到3.0结束，所以2.0是过渡版本，期间可能会出现诸多不稳定问题。</p>
