fix(core): 更新稳定版本下载链接

--- a/insiders/hub.html
+++ b/insiders/hub.html
@@ -50,7 +50,7 @@
         <td>2025-4-2</td>
         <td>Stable</td>
         <td>N/A</td>
-        <td><a class="download-link" href="/data/dev.html">下载</a></td>
+        <td><a class="download-link" href="/data/stable.html">下载</a></td>
     </tr>
     </tbody>
 </table>
