将 Fight Hub 重命名为 AVT(All Versions There)

--- a/insiders/2020.html
+++ b/insiders/2020.html
@@ -65,6 +65,6 @@
     <p><strong>Full Changelog</strong>: <a href="https://github.com/pyquick/pyquick/compare/2008...2020" class="button">View Changelog</a></p>
 
     <p><strong>GitHub</strong>: <a href="https://github.com/pyquick/pyquick" class="button">Visit GitHub</a></p>
-    <p>Go to <a href="hub.html" class="button">Fight Hub</a> to find more versions</p>
+    <p>Go to <a href="hub.html" class="button">AVT</a> to find more versions</p>
 </body>
 </html>
