--- a/insiders/hub.html
+++ b/insiders/hub.html
@@ -2,14 +2,14 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Hub</title>
+    <title>AVT</title>
     <meta charset="UTF-8">
     <title>PyQuick Insiders 版本发布</title>
     <link rel="stylesheet" href="static/css/hub.css">
 </head>
 <body>
 
-<h1>Fight Hub</h1>
+<h1>AVT(All Versions There)</h1>
 <table>
     <h2>2000+版本</h2>
     <p>这里包括我们最先尝试的功能和代码。</p>
