refactor(js): 优化下载页面JavaScript代码，提取公共功能到common.js
将dev.js、beta.js和stable.js中的重复代码提取到common.js中，使用模块化设计提高代码复用性和维护性。优化事件处理逻辑，减少DOM操作，提升性能。

--- a/data/stable.html
+++ b/data/stable.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/stable.css">
+  
   <link rel="icon" href="./stable/favicon.ico">
-  <script src="./static/js/stable.js"></script>
+  <script src="./static/js/common.js" defer></script>
+  <script src="./static/js/stable.js" defer></script>
   <title>Stable Download</title>
 </head>
 <body>
