--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
 <!-- 底部社交链接 -->
 <footer class="social-links">
-    <a href="https://github.com/pyquick" target="_blank">
+    <a href="https://github.com/pyquick" target="_blank" title="My Github">
         <i class="fab fa-github"></i>
     </a>
-    <a href="https://www.twitter.com/exe258011" target="_blank">
+    <a href="https://www.twitter.com/exe258011" target="_blank" title="My Twitter">
         <i class="fab fa-twitter"></i>
     </a>
     <a href="#" id="email-icon">
