--- a/data/dev.html
+++ b/data/dev.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/insiders.css">
-  <script src="./static/js/dev.js"></script>
+ 
+  <script src="./static/js/common.js" defer></script>
+  <script src="./static/js/dev.js" defer></script>
   <title>Dev Download</title>
 </head>
 <body>
