- Enhance snake game with high score tracking and end game feature - Update footer links and titles in `index.html` for improved clarity - Relocate and organize project files (e.g., `snake.html`, `snake.js`) for better structure - Minor fixes to file references and configurations in `.idea/workspace.xml` and `main.html` - Add new project favicon

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
 <!-- 底部社交链接 -->
 <footer class="social-links">
-    <a href="https://github.com/pyquick" target="_blank" title="My Github">
+    <a href="https://github.com/pyquick" target="_blank" title="Github">
         <i class="fab fa-github"></i>
     </a>
-    <a href="https://www.twitter.com/exe258011" target="_blank" title="My Twitter">
+    <a href="https://www.twitter.com/exe258011" target="_blank" title="Twitter">
         <i class="fab fa-twitter"></i>
     </a>
-    <a href="#" id="email-icon">
+    <a href="#" id="email-icon" title="Eamil">
         <i class="fas fa-envelope"></i>
     </a>
 </footer>
