--- a/pyquick/main.html
+++ b/pyquick/main.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <h1>PyQuick 项目介绍</h1>
-        <img src="/favicon.ico" alt="PyQuick Logo" class="logo">
+        <img src="./favicon.ico" alt="PyQuick Logo" class="logo">
         <p class="subtitle">一个为Python开发者量身打造的macOS/Windows效率工具箱</p>
     </header>
 
