--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     
     <!-- 引入 Font Awesome 图标 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- 引入额外的动画样式 -->
+    <link rel="stylesheet" href="/static/css/animation-additions.css">
 </head>
 <body>
 <div class="container">
@@ -78,7 +81,7 @@
     <a href="https://www.twitter.com/exe258011" target="_blank" title="Twitter">
         <i class="fab fa-twitter"></i>
     </a>
-    <a href="#" id="email-icon" title="Eamil">
+    <a href="#" id="email-icon" title="Email">
         <i class="fas fa-envelope"></i>
     </a>
 </footer>
