增加issues for pyquick

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                 <p>最新版本文档（dev不完整）</p>
             </div>
         </a>
+        <a href="./issue/index.html" class="card">
+            <div class="card-content">
+                <i class="fas fa-comments icon"></i>
+                <h2>问题反馈</h2>
+                <p>在此提出问题或参与讨论</p>
+            </div>
+        </a>
     </div>
 </div>
 
