--- a/pyquick/main.html
+++ b/pyquick/main.html
@@ -63,7 +63,7 @@
 
         <footer class="footer">
             <p>项目地址:<a href="https://github.com/pyquick/pyquick" target="_blank">https://github.com/pyquick/pyquick</a></p>
-            <p>文档中心(for developers):<a href="/developers" target="_blank">developers</a></p>
+            <!--<p>文档中心(for developers):<a href="/developers" target="_blank">developers</a></p>-->
         </footer>
     </main>
 
