perf(css/js): 优化CSS和JS性能，减少动画复杂度，添加硬件加速
- 减少背景动画尺寸和频率以降低CPU使用
- 添加will-change和transform: translateZ(0)提升渲染性能
- 优化字体渲染，添加Roboto等备用字体增强兼容性
- 简化阴影效果和动画幅度，减少重绘
- 重构JS代码，添加错误处理和资源清理逻辑
- 统一CSS变量命名，优化响应式设计

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="color-scheme" content="light dark">
     
     <!-- 预加载CSS -->
-    <link rel="preload" href="/static/css/index.css" as="style">
+    <link rel="preload" href="./static/css/index.css" as="style">
     <link rel="stylesheet" href="/static/css/index.css">
     
     <!-- 预连接CDN -->
